History of this buildout
========================

5.0.1 (unreleased)
------------------

- Refuse to send an e-mail for newsletters, etcetera, when this e-mail
  has already been sent in the last thirty minutes.  This will raise
  an exception and show a traceback.  We also show a warning on the
  email_out page with the date and time when this item was sent.
  Sending a test e-mail is always possible.
  [maurits]

- Avoid writing to the database every time we view a meeting.
  [maurits]

- Only update the main attachment count when an agenda item has at
  least one attachment.
  [maurits]

- Fixed possible KeyError on company when member has no such property.
  [maurits]

- Fixed logic error in the display of numbering of attachments in
  meetings.
  [maurits]

- Sort meetings by start date.
  [maurits]


5.0 (2013-03-13)
----------------

- Use officially released Products.PluggableAuthService 1.10.0 and
  collective.emaillogin4 1.3.
  [maurits]

- Use Plone 4.2.4.
  [maurits]

- Use and install collective.emaillogin4 and use internal release of
  Products.PluggableAuthService, soon to be released officially.
  [maurits]

- Memmon limit: 1300.  Use newer versions for supervisor and friends.
  Send a mail to Maurits via scripts/sendmail.py when memmon kills the
  instance.
  [maurits]

- Let memmon check for a maximum memory of 2000 MB instead of 2560.
  [maurits]

- Added custom recent portlet, search portlet and linkedIn portlet
  [vincent]

- Changed text of email subscription notification so it correctly
  mentions an Event instead of a Hearing when that is the case.
  [maurits]

- Moved theming to Diazo [thomvl]

- Email from for EmailMixin objects is now specified in a portal
  property. [vincent]

- Manually commit the transaction after sending
  email. [vincent+maurits]

- Reactivated project reminder crontab, launched at midnight every
  tuesday and friday. [vincent]

- fixed caching for the meeting's location. [vincent]
