@@ -47,7 +47,8 @@
               <li tal:define="oddrow repeat/project/odd"
                   tal:attributes="class python: oddrow and 'odd' or 'even'">
                 <a tal:attributes="href project/absolute_url" class="standard">
-                  <strong tal:content="project/getProject_number" />
+                  <strong tal:content="python:'%d-%s' % (project.getAdvisory_date().year(), project.getProject_number())"
+                          tal:on-error="project/getId" />
                   <span tal:replace="project/Title" />
                 </a>
               </li>
